# static-btree-highway

./: MODULE.bazel  README.md  WORKSPACE
images/m1pro/: max.csv
plot/: BUILD  plot.py  req.txt
results/: 9800x3d.csv  laptop.csv  m1.csv  m1pro.csv  pi.csv
static_btree/: BUILD  benchmark_helpers.hh  nano_bench.cc  static_btree.hh  static_btree_benchmark.cc  static_btree_test.cc
